<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="ru.egoncharovsky.words.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_quiz"
            android:name="ru.egoncharovsky.words.ui.quiz.QuizFragment"
            android:label="@string/quiz"
            tools:layout="@layout/fragment_quiz"/>

    <fragment
            android:id="@+id/nav_dictionary"
            android:name="ru.egoncharovsky.words.ui.dictionary.DictionaryFragment"
            android:label="@string/my_dictionary"
            tools:layout="@layout/fragment_dictionary"/>

    <fragment
            android:id="@+id/nav_word_lists"
            android:name="ru.egoncharovsky.words.ui.wordlist.WordListsFragment"
            android:label="@string/my_word_lists"
            tools:layout="@layout/fragment_word_lists"/>
</navigation>