<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_quiz"
                android:icon="@drawable/ic_baseline_school"
                android:title="@string/quiz"/>

        <item
                android:id="@+id/nav_dictionary"
                android:icon="@drawable/ic_baseline_book"
                android:title="@string/my_dictionary"/>

        <item
                android:id="@+id/nav_word_lists"
                android:icon="@drawable/ic_baseline_format_list_bulleted"
                android:title="@string/my_word_lists"/>

    </group>
</menu>