<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.quiz.RememberFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

        <TextView
                android:text="@string/do_you_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAlignment="center"
                android:textSize="24sp"/>

        <TextView
                android:text="@string/word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/wordValue"
                android:gravity="center"
                android:textSize="36sp"
                android:layout_marginVertical="30dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp">

        <Button
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/no"
                android:layout_weight="0.8"
                android:textSize="30sp"
                android:enabled="false"
                android:textColor="@color/no"
                style="?android:buttonBarButtonStyle"/>

        <Button
                android:text="@string/maybe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/maybe"
                android:layout_weight="1"
                android:textSize="30sp"
                android:enabled="false"
                android:textColor="@color/maybe"
                style="?android:buttonBarButtonStyle"/>

        <Button
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/yes"
                android:layout_weight="0.8"
                android:textSize="30sp"
                android:enabled="false"
                android:textColor="@color/yes"
                style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>