<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/word_lists_item"
        android:layout_margin="@dimen/item_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/editList"
                android:text="@string/text_placeholder"/>

        <TextView
                android:text="@string/words_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/count"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                />

        <ImageButton
                android:src="@drawable/ic_baseline_edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/editList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/edit"
                android:scaleType="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>