<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.importing.ImportWordsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/content_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout2">


        <TextView
                android:text="@string/supported_formats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/supportedFormats"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button
                android:text="@string/choose_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/importing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/supportedFormats"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button
                android:text="@string/clear_database"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/clearDatabase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/design_default_color_error"
                android:textSize="24sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>