<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.wordlist.WordListEditFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="729dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/words_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/count"
                    android:layout_weight="0.8"
                    android:textSize="18sp"/>

            <Button
                    android:text="@string/choose_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/choose"
                    android:layout_weight="0.3"
                    android:textSize="14sp"/>
        </LinearLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp">

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/words"
                    tools:listitem="@layout/fragment_word_list_item"/>

        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>