<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.wordlist.StudyListEditFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:layout_marginTop="@dimen/content_margin"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_margin">

            <TextView
                    android:text="@string/words_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/count"
                    android:layout_weight="0.8"
                    android:textSize="18sp"/>

            <Button
                    android:text="@string/choose_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/choose"
                    android:layout_weight="0.3"
                    android:textSize="14sp"/>
        </LinearLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent"
                >

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/words"
                    tools:listitem="@layout/fragment_study_list_item"
                    android:layout_marginHorizontal="@dimen/content_margin"/>

        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_checkmark_holo_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>